--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -133,12 +133,12 @@
     "description": "Manage your account preferences and shop configuration",
     "upgradePlan": "Upgrade Plan",
     "upgradePlanDescription": "Unlock premium features and increase limits",
-    "addCashier": "Add Cashier",
-    "addCashierDescription": "Create cashier accounts for your staff",
-    "privacySecurity": "Privacy & Security",
-    "privacySecurityDescription": "Control your data and security settings",
-    "helpSupport": "Help & Support",
-    "helpSupportDescription": "Get help and contact our support team",
+    "addcashier": "Add Cashier",
+    "addcashierDescription": "Create cashier accounts for your staff",
+    "privacy&security": "Privacy & Security",
+    "privacy&securityDescription": "Control your data and security settings",
+    "help&support": "Help & Support",
+    "help&supportDescription": "Get help and contact our support team",
     "cashierList": "Cashier List",
     "cashierListDescription": "View and manage your cashier accounts",
     "loadingCashiers": "Loading cashiers...",
@@ -149,15 +149,7 @@
     "selectLanguage": "Select language",
     "manage": "Manage",
     "upgrade": "Upgrade",
-    "getHelp": "Get Help",
-    "upgradePlan": "Upgrade Plan",
-    "upgradePlanDescription": "Unlock premium features and increase limits",
-    "addCashier": "Add Cashier",
-    "addCashierDescription": "Create cashier accounts for your staff",
-    "privacySecurity": "Privacy & Security",
-    "privacySecurityDescription": "Control your data and security settings",
-    "helpSupport": "Help & Support",
-    "helpSupportDescription": "Get help and contact our support team"
+    "getHelp": "Get Help"
   },
   "addCashier": {
     "title": "Add Cashier",
