--- a/src/locales/fr/global.json
+++ b/src/locales/fr/global.json
@@ -132,13 +132,13 @@
     "title": "Paramètres",
     "description": "Gérez vos préférences de compte et la configuration de votre boutique",
     "upgradePlan": "Mettre à Niveau le Plan",
-    "upgradePlanDescription": "Débloquez des fonctionnalités premium et augmentez les limites",
-    "addCashier": "Ajouter un Caissier",
-    "addCashierDescription": "Créez des comptes caissier pour votre personnel",
-    "privacySecurity": "Confidentialité et Sécurité",
-    "privacySecurityDescription": "Contrôlez vos données et paramètres de sécurité",
-    "helpSupport": "Aide et Support",
-    "helpSupportDescription": "Obtenez de l'aide et contactez notre équipe de support",
+    "upgradeplanDescription": "Débloquez des fonctionnalités premium et augmentez les limites",
+    "addcashier": "Ajouter un Caissier",
+    "addcashierDescription": "Créez des comptes caissier pour votre personnel",
+    "privacy&security": "Confidentialité et Sécurité",
+    "privacy&securityDescription": "Contrôlez vos données et paramètres de sécurité",
+    "help&support": "Aide et Support",
+    "help&supportDescription": "Obtenez de l'aide et contactez notre équipe de support",
     "cashierList": "Liste des Caissiers",
     "cashierListDescription": "Visualisez et gérez vos comptes caissier",
     "loadingCashiers": "Chargement des caissiers...",
