--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -51,7 +51,7 @@
         "description": "Best if you are in Western Europe"
       },
       "eu-central-1": {
-        "name": "Frankfurt", 
+        "name": "Frankfurt",
         "description": "Best if you are in Central Europe"
       },
       "us-east-1": {
@@ -145,8 +145,8 @@
   "settings": {
     "title": "Settings",
     "description": "Manage your account preferences and shop configuration",
-    "upgradePlan": "Upgrade Plan",
-    "upgradePlanDescription": "Unlock premium features and increase limits",
+    "upgradeplan": "Upgrade Plan",
+    "upgradeplanDescription": "Unlock premium features and increase limits",
     "addcashier": "Add Cashier",
     "addcashierDescription": "Create cashier accounts for your staff",
     "privacy&security": "Privacy & Security",
