--- a/src/locales/fr/global.json
+++ b/src/locales/fr/global.json
@@ -80,11 +80,10 @@
     "description": "Gérez votre campagne promotionnelle",
     "campaignLinks": "Liens de Campagne",
     "campaignLinksDescription": "Copiez ces liens pour suivre le trafic des différentes plateformes de médias sociaux",
-    "trackTraffic": "Suivre le trafic {{platform}}",
     "quickActions": "Actions Rapides",
     "viewAnalytics": "Voir les Analyses",
     "editPromo": "Modifier la Promo",
-    "linkCopied": "Lien copié ✅",
+    "linkCopied": "Lien copié – collez dans votre annonce ✅",
     "copyLink": "Copier le lien de campagne {{platform}}",
     "viewDetails": "Voir les Détails",
     "goBack": "Retour à la liste des promos"
