refactoring to function core + DI in UI component

--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -162,7 +162,7 @@
     "selectLanguage": "Select language",
     "manage": "Manage",
     "upgrade": "Upgrade",
-    "getHelp": "Get Help"
+    "gethelp": "Get Help"
   },
   "addCashier": {
     "title": "Add Cashier",
