--- a/src/locales/fr/global.json
+++ b/src/locales/fr/global.json
@@ -162,7 +162,11 @@
     "selectLanguage": "Sélectionner la langue",
     "manage": "Gérer",
     "upgrade": "Mettre à niveau",
-    "getHelp": "Obtenir de l'aide",
+    "getHelp": "Obtenir de l'aide", 
+    "removeCashier": "Supprimer le caissier ?",
+    "removeCashierDescription": "Cette action supprimera {{name}} de votre liste de caissiers. Vous ne pouvez pas annuler cette action.",
+    "removeCashierConfirm": "Supprimer",
+    "removeCashierCancel": "Garder le caissier",
     "upgradePlan": "Mettre à Niveau le Plan",
     "upgradePlanDescription": "Débloquez des fonctionnalités premium et augmentez les limites",
     "addCashier": "Ajouter un Caissier",
